Added edit for Employees, Products, abd Category

--- a/views/access/accessscripts.ejs
+++ b/views/access/accessscripts.ejs
@@ -197,8 +197,8 @@
                             success('Saved', 'Successfully')
                         }
 
-                        if (result.msg == 'exist') {
-                            warning('Exist', `${accessnamemodal} already exist!`);
+                        if (result.msg == 'duplicate') {
+                            warning('Duplicate', `${accessnamemodal} already exist!`);
                         }
 
                     },
