--- a/views/cashreports/cashreports.ejs
+++ b/views/cashreports/cashreports.ejs
@@ -2,7 +2,7 @@
 <div class="container-fluid">
     <div class="card shadow mb-4 table-size">
         <div class="card-header py-3 header-bg">
-            <h6 class="m-0 font-weight-bold table-title text-white">Sales Items</h6>
+            <h6 class="m-0 font-weight-bold table-title text-white">Cash Reports</h6>
         </div>
     <div class="card-body">
         <div class="table-responsive scrollable-table-container">
