Fix employees page

--- a/views/employees/employees.ejs
+++ b/views/employees/employees.ejs
@@ -17,7 +17,7 @@
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <label class="form-label">Employees ID</label>
-                                <input id="employeeid" name="employeeid" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                                <input id="employeeidmodal" name="employeeidmodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
                         <div class="row mb-2">
