--- a/views/employees/employeesscripts.ejs
+++ b/views/employees/employeesscripts.ejs
@@ -18,7 +18,7 @@ $(document).ready(function () {
     }) 
 
     $(document).on('click', '#editBtn', function(){
-        $('#employeeid').val(employeeid);
+        $('#employeeidmodal').val(employeeid);
         $('#employeesModal').modal('show');
     })
 
@@ -243,7 +243,7 @@ $(document).ready(function () {
     });
 
     $(document).on('click', '#updateBtn', function () {
-            let employeeid = $('#employeeid').val();
+            let employeeid = $('#employeeidmodal').val();
             let positionname = $('#positionlist').val();
             let contactinfo = $('#contactinfomodal').val();
 
