--- a/views/products/productsscripts.ejs
+++ b/views/products/productsscripts.ejs
@@ -220,11 +220,17 @@ $(document).ready(function () {
                         <button id="editBtn" class="btn btn-outline-inventory shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button>
                         <button id="activeBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="activeBtn">ACTIVE</button>`;
                 }
+                
+                const numericValue = parseFloat(item.price.replace(/₱|,/g, ''));
 
                 const tr = $('<tr>').append(
                     $('<td>', { text: item.productid, 'data-label': 'Product ID', class: 'custom-mobile-align' }),
                     $('<td>', { text: item.description, 'data-label': 'Description', class: 'custom-mobile-align' }),
-                    $('<td>', { text: item.price, 'data-label': 'Price', class: 'custom-mobile-align' }),
+                    $('<td>', {
+                        text: isNaN(numericValue) ? 'N/A' : formatCurrency(numericValue),
+                        'data-label': 'Price',
+                        class: 'custom-mobile-align'
+                    }),
                     $('<td>', { text: item.barcode, 'data-label': 'Barcode', class: 'custom-mobile-align' }),
                     $('<td>', {
                         html: item.productimage
@@ -241,6 +247,11 @@ $(document).ready(function () {
                 tableBody.append(tr);
             });
         }
+    }
+
+    function formatCurrency(value) {
+        var formattedValue = parseFloat(value).toFixed(2);
+        return '₱' + formattedValue.replace(/\d(?=(\d{3})+\.)/g, '$&,');
     }
 
     function LoadTable() {
