--- a/views/products/products.ejs
+++ b/views/products/products.ejs
@@ -23,7 +23,7 @@
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <label class="form-label">Product Description: </label>
-                                <input id="descriptionmodal" name="descriptionmodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input id="descriptionmodal" name="descriptionmodal" placeholder="Enter new description" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                         <div class="row justify-content-center">
