Added search to all data tables

--- a/views/employees/employees.ejs
+++ b/views/employees/employees.ejs
@@ -119,7 +119,23 @@
 <!-- DataTales Example -->
 <div class="card shadow mb-4 table-size">
     <div class="card-header py-3 header-bg">
-        <h6 class="m-0 font-weight-bold table-title text-white">DataTables Example</h6>
+        <div class="row">
+            <div class="col-md-6">
+                <h6 class="mt-2 font-weight-bold table-title text-white">Employees Data:</h6>
+            </div>
+            <div class="col-md-6">
+                <div class="input-group">
+                    <input type="text" class="form-control bg-light border-0 small"
+                        placeholder="Search for..." aria-label="Search"
+                        aria-describedby="basic-addon2" id="search-input">
+                    <div class="input-group-append">
+                        <button class="btn sis-btn-color" type="button" id="search-button">
+                            <i class="fas fa-search fa-sm"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="card-body">
         <div class="table-responsive scrollable-table-container">
