--- a/views/access/accessscripts.ejs
+++ b/views/access/accessscripts.ejs
@@ -60,6 +60,37 @@
             }
         })
 
+        function filterTableRows() {
+            const searchQuery = $('#search-input').val().trim().toLowerCase();
+            let foundMatches = false;
+
+            $('#no-match-row').remove();
+
+            $('#access-table tbody tr').each(function() {
+                const rowData = $(this).text().toLowerCase();
+                if (rowData.includes(searchQuery)) {
+                    $(this).show();
+                    foundMatches = true;
+                } else {
+                    $(this).hide();
+                }
+            });
+
+            if (!foundMatches) {
+                const noMatchRow = $('<tr>').append(
+                    $('<td>', {
+                        colspan: 9,
+                        class: 'text-center',
+                        text: 'No Data Matched'
+                    })
+                );
+                $('#access-table tbody').append(noMatchRow);
+                noMatchRow.attr('id', 'no-match-row');
+            }
+        }
+
+        $('#search-input').on('input', filterTableRows);
+
         function populateAccessTable(data) {
             console.log(data);
             const tableBody = $('#access-table tbody');
@@ -208,7 +239,6 @@
                 })
             }
         })
-        
-        }
-    )
+
+    })
 </script>
